--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -74,7 +74,7 @@
               class="flex items-center space-x-2 px-3 py-2 text-gray-700 hover:bg-gray-100 rounded-md transition-colors"
             >
               <i class="fa-solid fa-user-circle text-xl"></i>
-              <span class="font-medium">{{ username }}</span>
+              <span class="font-medium">{{ username() }}</span>
               <i class="fa-solid fa-chevron-down text-sm"></i>
             </button>
             
